--- a/stylecal.css
+++ b/stylecal.css
@@ -26,7 +26,7 @@ padding-left: 100px;
 
 }
 .calculator{
-background: #fff;
+border-color: #fff;
 padding: 20px;
 border-radius: 10px;
  border-style: groove;
